전남대 BE_정호성 3주차 과제(2단계) (#357)
* refactor: 사용하지않는 import 삭제

* refactor: 피드백 반영

* fix: WishProductNotFoundException 추가

* refactor: 사용하지않는 코드 삭제

* fix: init DB 삭제

* docs: step2 readme 작성

* feat: 연관관계 맵핑

* fix: 연관관계 주인 맵핑

* fix: member entity 생성자 변경

* fix: 기본생성자 접근제어자 변경
https://velog.io/@jyyoun1022/JPA-JPA%EC%97%90%EC%84%9C-Entity%EC%97%90-protected-%EC%83%9D%EC%84%B1%EC%9E%90%EB%A5%BC-%EB%A7%8C%EB%93%9C%EB%8A%94-%EC%9D%B4%EC%9C%A0

* feat: member, wish 연관관계 편의 메서드 작성
https://friends-aihaja.tistory.com/entry/5-%EC%96%91%EB%B0%A9%ED%96%A5-%EC%97%B0%EA%B4%80%EA%B4%80%EA%B3%84%EC%99%80-%EC%97%B0%EA%B4%80%EA%B4%80%EA%B3%84-%EC%A3%BC%EC%9D%B8

* feat: product, wish 연관관계 편의 메서드 작성

* fix: WishRepository keyword 수정
https://velog.io/@parksegun/JPA-find-by-%EC%99%B8%EB%9E%98%ED%82%A4FK-%EC%A1%B0%ED%9A%8C-%EB%B0%A9%EB%B2%95

* feat: MemberMapper 생성

* fix: 변경감지를 통해 영속성 관리

* feat: ProductMapper 생성

* feat: ProductMapper 생성

* fix: 변경감지를 통해 영속성 관리

* feat: WishMapper 생성

* refactor: WishService 연관관계에 맞춤

* feat: email 조회 기능 추가

* refactor: 안 쓰는 메서드 삭제

* refactor: 코드 통일성 개선

* fix: @Component 어노테이션 추가

* fix: admin, 일반 사용자 분리

* feat: 의문점, 테스트코드 작성

* refactor: update return 변경

* refactor: 사용하지 않는 import 삭제

---------

Co-authored-by: yoong-saks <wjdghtjd06@gmail.com>