@@ -2,44 +2,48 @@ package gift.service.member;
 
 import gift.domain.member.Member;
 import gift.domain.member.MemberRepository;
+import gift.mapper.MemberMapper;
 import gift.web.dto.MemberDto;
 import gift.web.exception.MemberNotFoundException;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 
 
 @Service
 public class MemberService {
-    private final MemberRepository memberRepository;
 
-    public MemberService(MemberRepository memberRepository) {
+    private final MemberRepository memberRepository;
+    private final MemberMapper memberMapper;
+
+    public MemberService(MemberRepository memberRepository, MemberMapper memberMapper) {
         this.memberRepository = memberRepository;
+        this.memberMapper = memberMapper;
     }
 
     public List<MemberDto> getMembers() {
         return memberRepository.findAll()
             .stream()
-            .map(MemberDto::from)
-            .collect(Collectors.toList());
+            .map(memberMapper::toDto)
+            .toList();
     }
 
     public MemberDto getMemberByEmail(String email) {
         return memberRepository.findByEmail(email)
-            .map(MemberDto::from)
+            .map(memberMapper::toDto)
             .orElseThrow(() -> new MemberNotFoundException("멤버가 엄슴다"));
     }
 
     public void createMember(MemberDto memberDto) {
-        memberRepository.save(MemberDto.toEntity(memberDto));
+        memberRepository.save(memberMapper.toEntity(memberDto));
     }
 
     public MemberDto updateMember(String email, MemberDto memberDto) {
-        memberRepository.findByEmail(email)
+        Member member = memberRepository.findByEmail(email)
             .orElseThrow(() -> new MemberNotFoundException("멤버가 없슴다."));
-        Member newMember = MemberDto.toEntity(memberDto);
-        memberRepository.save(newMember);
-        return MemberDto.from(newMember);
+
+        member.updateMember(memberDto.email(), memberDto.password());
+        // 의문 : jpa의 변경감지로 인해서 위의 updateMember에서 이미 업데이트 될 것인데, save를 또 할 필요가 있을까 ?
+        return memberMapper.toDto(member);
     }
 
     public void deleteMember(String email) {
